Resumo do livro added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<!-- HTML Meta Tags -->
 	<title>Trinity Web - Transformando ideias em negócios!</title>
-	
+
 	<meta name="description"
 		content="Desde 2019 sendo o braço direito de nossos clientes! Qualidade e preço justo. Consulte-nos.">
 	<meta name="title" content="Trinity Web - Transformando ideias em negócios!">
@@ -541,6 +541,8 @@
 									<div class="vlt-gap-70"></div>
 
 									<div class="customer-logos slider">
+										<div class="slide-in-right slide"><img src="assets/img/root/rdl.webp"
+												alt="Resumo do Livro" height="150" width="150"></a></div>
 										<div class="slide-in-right slide"><img src="assets/img/root/cliente-01.webp"
 												alt="Tiken" height="150" width="150"></a></div>
 										<div class="slide-in-right slide"><img src="assets/img/root/cliente-02.webp"
